--- a/app/src/main/res/layout/act_onekey_login.xml
+++ b/app/src/main/res/layout/act_onekey_login.xml
@@ -11,7 +11,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:onClick="onClick"
-        android:text="一键登录" />
+        android:text="一键登录-全屏" />
+
+    <Button
+        android:id="@+id/bt_login_dialog"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="onClick"
+        android:text="一键登录-弹框" />
 
     <TextView
         android:id="@+id/tv_token"
